# Beaconizer

./: CMakeLists.txt  README.md  TODO.md  ToDo
cmake/: .FindBlueZ.cmake.swp  FindBlueZ.cmake
include/: CMakeLists.txt
include/beaconizer/: btest.h.in  config.h.in  db.h  hci.h  hci_cmd.h  hci_config.h.in  io.h  loop.h  signal.h  timeout.h  timer.h  utility.h  watchdog.h
include/btest/: btest.h.in  db.h  hci.h  io.h  loop.h  timeout.h  utility.h  watchdog.h
src/: CMakeLists.txt
src/common/: db.c  io.c  loop.c  signal.c  timeout.c  timer.c  utility.c  watchdog.c
src/eddystone/: CMakeLists.txt  eddystone.c
src/ibeacon/: CMakeLists.txt  ibeacon.c  ibeacon.h.in
test/: CMakeLists.txt  db00.c  db01.c  db02.c  db03.c  io00.c  io01.c  loop00.c  loop01.c  loop02.c  loop03.c  test.ibeacon.sh.in
